[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Login.gd" type="Script" id=1]
[ext_resource path="res://Scripts/env.gd" type="Script" id=2]

[node name="LoginPage" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="CanvasLayer"]

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_right = 1022.0
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserLabel" type="Label" parent="CanvasLayer/Panel"]
margin_left = 118.554
margin_top = 102.866
margin_right = 184.554
margin_bottom = 116.866
text = "Username"

[node name="PwdLabel" type="Label" parent="CanvasLayer/Panel"]
margin_left = 117.364
margin_top = 194.435
margin_right = 177.364
margin_bottom = 208.435
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TokenLabel" type="Label" parent="CanvasLayer/Panel"]
margin_left = 531.926
margin_top = 56.5284
margin_right = 591.926
margin_bottom = 70.5284
text = "Tokens"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserEdit" type="LineEdit" parent="CanvasLayer/Panel"]
margin_left = 115.765
margin_top = 127.939
margin_right = 415.765
margin_bottom = 177.939
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PwdEdit" type="LineEdit" parent="CanvasLayer/Panel"]
margin_left = 115.171
margin_top = 214.157
margin_right = 415.171
margin_bottom = 264.157
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TokenEdit" type="TextEdit" parent="CanvasLayer/Panel"]
margin_left = 530.0
margin_top = 82.0
margin_right = 950.0
margin_bottom = 540.0
readonly = true
wrap_enabled = true

[node name="LoginButton" type="Button" parent="CanvasLayer/Panel"]
margin_left = 114.362
margin_top = 349.813
margin_right = 314.362
margin_bottom = 409.813
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="CanvasLayer"]
margin_left = 417.926
margin_top = 225.36
margin_right = 717.926
margin_bottom = 325.36
window_title = "Login"
[connection signal="request_completed" from="CanvasLayer/HTTPRequest" to="CanvasLayer" method="_on_HTTPRequest_request_completed"]
[connection signal="button_up" from="CanvasLayer/Panel/LoginButton" to="CanvasLayer" method="_on_LoginButton_button_up"]
[connection signal="confirmed" from="CanvasLayer/AcceptDialog" to="CanvasLayer" method="_on_AcceptDialog_confirmed"]
